--- a/main.html
+++ b/main.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <table border="1px">
+       <tr>
+          <td>Roll number</td>
+          <td>Name</td>
+       </tr>
+       <tr>
+        <td>1</td>
+        <td>Gulvaiz</td>
+       </tr>
+       <tr>
+        <td>2</td>
+        <td>Alam</td>
+       </tr>
+    </table>
 </body>
-
+</html>
 </html>
