--- a/main.html
+++ b/main.html
@@ -7,10 +7,13 @@
 </head>
 <body>
     <table border="1px">
+	<thead>	
        <tr>
           <td>Roll number</td>
           <td>Name</td>
        </tr>
+		</thead>
+		<tbody>
        <tr>
         <td>1</td>
         <td>Gulvaiz</td>
@@ -19,6 +22,7 @@
         <td>2</td>
         <td>Alam</td>
        </tr>
+			</tbody>
     </table>
 </body>
 </html>
