--- a/main.html
+++ b/main.html
@@ -22,6 +22,10 @@
         <td>2</td>
         <td>Alam</td>
        </tr>
+			 <tr>
+        <td>3</td>
+        <td>Accio</td>
+       </tr>
 			</tbody>
     </table>
 </body>
