--- a/main.html
+++ b/main.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Student Roll Numbers and Names</title>
 </head>
 <body>
-    <table border="1px">
-	<thead>	
-       <tr>
-          <td>Roll number</td>
-          <td>Name</td>
-       </tr>
-		</thead>
-		<tbody>
-       <tr>
-        <td>1</td>
-        <td>Gulvaiz</td>
-       </tr>
-       <tr>
-        <td>2</td>
-        <td>Alam</td>
-       </tr>
-			 <tr>
-        <td>3</td>
-        <td>Accio</td>
-       </tr>
-			</tbody>
-    </table>
+
+<table>
+  <thead>
+    <tr>
+      <th>Roll number</th>
+      <th>Name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>001</td>
+      <td>John Doe</td>
+    </tr>
+    <tr>
+      <td>002</td>
+      <td>Jane Smith</td>
+    </tr>
+    <tr>
+      <td>003</td>
+      <td>Alice Johnson</td>
+    </tr>
+  </tbody>
+</table>
+
 </body>
-</html>
 </html>
